Proyecto Reto4FE v0.2 - Upload 02 - 20211029

--- a/client.html
+++ b/client.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ciclo 3 - Reto 3 - Clientes</title>
+    <title>Ciclo 3 - Reto 4 - Clientes</title>
     <style>
         table, th, td {
           border: 1px solid gray;
@@ -24,6 +24,7 @@
 
     <div>
         <p>Consulta de Registros:</p>
+        <p>Para consultar la tabla de registros de clic en el botón 'Consultar'.</p>
         <fieldset style="width: 45%">
             <div align="center" id="resultado"></div>
         </fieldset>
@@ -67,7 +68,7 @@
     <!--<button onclick="editarInformacion()"> Actualizar </button>-->
     <br />
     <p>Para volver a la pagina de inicio de clic en el botón 'Inicio':</p>
-    <button onclick="window.location.href='/reto3fe/index.html'"> Inicio </button>
+    <button onclick="window.location.href='/reto4fe/index.html'"> Inicio </button>
     </center>
 </body>
 
