--- a/doctor.html
+++ b/doctor.html
@@ -34,7 +34,8 @@
     </div>
     <br />
     <div>
-        <p><b>Agregar/Actualizar Registros:</b></p>
+        <p><b>Añadir/Actualizar Registros:</b></p>
+        <p><i>Recuerde verificar que hayan Especialidades registradas antes de añadir registros de Médicos.</i></p>
         <p>Ingrese y seleccione los datos del registro en los campos del formulario:</p>
         <p>1. Para agregar un nuevo registro de clic en el botón 'Guardar'.</p>
         <p>2. Para actualizar un registro existente, en la tabla de consulta</p>
@@ -75,7 +76,7 @@
     <button onclick="window.location.href='/reto4fe/index.html'"> Inicio </button>
 
     <div>
-        <script type="text/javascript">
+        <script defer type="text/javascript">
             inicioSpecialty();
         </script>
     </div> 
