--- a/reservation.html
+++ b/reservation.html
@@ -35,6 +35,7 @@
     <br />
     <div>
         <p><b>Agregar/Actualizar Registros:</b></p>
+        <p><i>Recuerde verificar que hayan Médicos y Clientes registrados antes de añadir registros de Reservaciones.</i></p>
         <p>Ingrese y seleccione los datos del registro en los campos del formulario:</p>
         <p>1. Para agregar un nuevo registro de clic en el botón 'Guardar'.</p>
         <p>2. Para actualizar un registro existente, en la tabla de consulta</p>
