Proyecto Reto4FE v1 - Upload 04 - 20211029

--- a/reservation.html
+++ b/reservation.html
@@ -36,6 +36,7 @@
     <div>
         <p><b>Agregar/Actualizar Registros:</b></p>
         <p><i>Recuerde verificar que hayan Médicos y Clientes registrados antes de añadir registros de Reservaciones.</i></p>
+        <p><i>Calificación de '0' (Cero) = Pendiente por Calificación.</i></p>
         <p>Ingrese y seleccione los datos del registro en los campos del formulario:</p>
         <p>1. Para agregar un nuevo registro de clic en el botón 'Guardar'.</p>
         <p>2. Para actualizar un registro existente, en la tabla de consulta</p>
@@ -68,10 +69,10 @@
                 </tr>
                 <tr>
                     <td><b>CALIFICACION DE LA RESERVACION:</b></td>
-                    <td><select id="select-score" size="5">
-                        <option value="5">5</option><option value="4">4</option>
+                    <td><select id="select-score">
+                     <!--<option value="5">5</option><option value="4">4</option>
                         <option value="3">3</option><option value="2">2</option>
-                        <option value="1">1</option>
+                        <option value="1">1</option> -->
                         </select>
                     </td>
                 </tr>
