--- a/score.html
+++ b/score.html
@@ -45,11 +45,10 @@
             <table align="center">
                 <tr>
                     <td>CALIFICACION:</td>
-                    <td><select id="select-score" size="5">
-                        <option value="5">5</option><option value="4">4</option>
+                    <td><input type="number" id="score" placeholder="score" required>
+                    <!--<option value="5">5</option><option value="4">4</option>
                         <option value="3">3</option><option value="2">2</option>
-                        <option value="1">1</option>
-                        </select>
+                        <option value="1">1</option>-->
                     </td>
                 </tr>
             </table>
